8319793: C2 compilation fails with "Bad graph detected in build_loop_late" after JDK-8279888

Reviewed-by: mbaesken
Backport-of: b922f8d45951250b7c39cb179b9bc1a8a6256a9e